--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-redis:2.0.3.RELEASE'
     compileOnly 'org.springframework.boot:spring-boot-starter-tomcat:2.0.3.RELEASE'
     compile 'org.apache.httpcomponents:httpclient:4.5.6'
+    compile fileTree(dir:'lib',includes:['*jar'])
 }
 
 
