--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,13 +8,15 @@ spring.datasource.username=root
 spring.datasource.password=123456
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.mapper-locations=classpath:mappers/*.xml
 mybatis.type-aliases-package=com.reactx.selection.models
 
 logging.path=./cloudwe-selection-logs
-logging.level.root=warn
+logging.level.root=Info
 
 image.baseDir=E:\\home\\img\\
 image.baseURL=/img/
+
+
