--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -1,2 +1,37 @@
 logging.path=./cloudwe-selection-logs
 logging.level.root=warn
+spring.jackson.time-zone=GMT+8
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.cloud.loadbalancer.retry.enabled=true
+alibaba-nacos-discovery-client-common.ribbon.ConnectTimeout=250
+logging.level.com.reactx.selection.mappers=debug
+
+spring.datasource.url=jdbc:mysql://172.16.161.80:33356/quan11?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useOldAliasMetadataBehavior=true&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
+spring.datasource.username=b546217c1815c9a6
+spring.datasource.password=b546217c1815c9a6
+
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+mybatis.mapper-locations=classpath:mappers/*.xml
+mybatis.type-aliases-package=com.reactx.selection.models
+
+spring.redis.database=0
+spring.redis.host=172.16.161.80
+spring.redis.port=6379
+spring.redis.timeout=60000
+spring.redis.jedis.pool.max-active=200
+spring.redis.jedis.pool.max-wait=-1
+spring.redis.jedis.pool.max-idle=50
+spring.redis.jedis.pool.min-idle=0
+
+taobao.appKey=25327447
+taobao.appSecret=6fdc222ab2dfb74ff308b961c991be71
+taobao.veKey=V00000963Y49141262
+
+pdd.clientId=4db573ad20df471687f56e3c4fbf5e50
+pdd.clientSecret=237353bc585ce15de47fa33e5ceeb1d1ddc37007
+pdd.url=http://gw-api.pinduoduo.com/api/router
+
+image.baseDir=/usr/local/quan11/img/
+image.baseURL=/img/
